--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/config/upload.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
     "@types/csv-parse": "^1.2.2",
-    "csv-parse": "^4.8.8",
+    "csv-parse": "^4.8.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
